fix annotation pipeline

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,14 +2,14 @@
     slurm{
         process.executor = 'slurm'
         singularity.enabled = true
-        singularity.cacheDir = "${projectDir}/../singularity-images/"
+        singularity.cacheDir = "${projectDir}/../../.tmp/singularity-images/"
         queueSize = 50
         submitRateLimit = '1 sec'
     }
     uppmax_inter{
         process.executor = 'local'
         singularity.enabled = true
-        singularity.cacheDir = "${projectDir}/../singularity-images/"
+        singularity.cacheDir = "${projectDir}/../../.tmp/singularity-images/"
         queueSize = 100
         submitRateLimit = '0.1 sec'
     }
@@ -17,7 +17,7 @@
     local{
         process.executor = 'local'
         singularity.enabled = false
-        singularity.cacheDir = "${projectDir}/../singularity-images/"
+        singularity.cacheDir = "${projectDir}/../../.tmp/singularity-images/"
         queueSize = 10
     }
   
@@ -26,9 +26,9 @@
  process{
     cpus = 1
     memory = 6.GB
-    time = '10min'
+    time = '20min'
     queue = 'core'
-    clusterOptions='-A snic2022-22-179'
+    clusterOptions='-A snic2022-22-994'
 
     withLabel: 'vshort'{
         cpus=1
@@ -36,12 +36,11 @@
         time= '5min'
         
     }
-
     withName: SPADES{
         cpus = 10
-        memory = 16.GB
-        time='15min'
-        ext.args='-k 21,33,55,77,99,127 --isolate --only-assembler'
+        memory = 20.GB
+        time='120min'
+        ext.args='-k 21,33,55,77,99,127 --careful'
     }
     withName: DIAMOND_BLASTX{
         cpus = 10
@@ -49,20 +48,17 @@
         time='120min'
         ext.args='--max-target-seqs 1 --masking 0 --quiet'
     }
-	withName: BLASTN{
-		cpus = 5
-        memory = 6.GB
-        time='10min'
-	}
+	
 	withName: PRODIGAL{
 		cpus = 1
-        memory = 4.GB
+        memory = 6.GB
         time='7min'
 	}
-	withName: KRAKEN2_KRAKEN2{
-        cpus = 10
+	withName: TRIMGALORE{
+		cpus = 10
         memory = 16.GB
-        time='10min'
-      
-    }
+        time='15min'
+	}
+	
+	
 }
