finished cryptic pipeline with gbk parser

--- a/nextflow.config
+++ b/nextflow.config
@@ -59,6 +59,11 @@
         memory = 16.GB
         time='15min'
 	}
+    withName: VARIANT_CALL{
+    cpus = 5
+    memory = 16.GB
+    time='300min'
+    }
 	
 	
 }
