developing SNP-CALL pipeline

--- a/nextflow.config
+++ b/nextflow.config
@@ -64,6 +64,18 @@
     memory = 16.GB
     time='300min'
     }
+    
+    withName:BOWTIE2_BUILD{
+    cpus = 10
+    memory = 16.GB
+    time='5min'
+    }
+
+    withName:BOWTIE2_ALIGN{
+    cpus = 10
+    memory = 16.GB
+    time='15min'
+    }
 	
 	
 }
