--- a/nextflow.config
+++ b/nextflow.config
@@ -76,6 +76,11 @@
     memory = 16.GB
     time='30min'
     }
+    withName:MMSEQS_CLUSTERNT{
+    cpus = 10
+    memory = 16.GB
+    time='30min'
+    }
 	
 	
 }
