add vcf annotations from GenBank file

--- a/nextflow.config
+++ b/nextflow.config
@@ -81,6 +81,10 @@
     memory = 16.GB
     time='30min'
     }
-	
+	withName:ANNOTATE_VCF_GBK{
+    cpus = 1
+    memory = 8.GB
+    time='200min'
+    }
 	
 }
