Annotate reference protein with swissprot proteins

--- a/nextflow.config
+++ b/nextflow.config
@@ -48,6 +48,12 @@
         time='120min'
         ext.args='--max-target-seqs 1 --masking 0 --quiet'
     }
+    withName: DIAMOND_BLASTP{
+        cpus = 10
+        memory = 32.GB
+        time='120min'
+       
+    }
 	
 	withName: PRODIGAL{
 		cpus = 1
